--- a/src/index.css
+++ b/src/index.css
@@ -174,8 +174,7 @@ html {
 /* Input focus ring */
 input:focus, select:focus, textarea:focus {
   outline: none;
-  ring: 2px;
-  ring-color: #3b82f6;
+  box-shadow: 0 0 0 2px #3b82f6;
 }
 
 /* Number input hide arrows */
@@ -187,6 +186,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 input[type="number"] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 /* Alliance colors */
